THRIFT-3413 Thrift code generation bug in Go when extending service Client: Go Patch: Jens Geyer